--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^17.0.5",
     "concurrently": "^6.5.1",
     "nodemon": "^2.0.15"
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.6"
   }
 }
